7. Importadors funcionant 100 correcte